--- a/week-8/day-2/Activities/12-Blog-CRUD/Unsolved/config/config.json
+++ b/week-8/day-2/Activities/12-Blog-CRUD/Unsolved/config/config.json
@@ -1,11 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "root",
     "database": "blogger",
     "host": "127.0.0.1",
     "port": 3306,
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "dialectOptions": {
+      "socketPath": "/Applications/MAMP/tmp/mysql/mysql.sock"
+    }
   },
   "test": {
     "username": "root",
